@@ -6,6 +6,8 @@
 
     * las/arch/x86_64/main.c: Added the BT instruction
 
+    * las/arch/x86_64/main.c: Added the BTC instruction
+
 
 2013-12-06  Hirochika Asai  <asai@scyphus.co.jp>
 
